native/llama_dart_bridge/include/llama_dart.h

typedef enum llama_dart_result {
  LLAMA_DART_SUCCESS = 0,
  LLAMA_DART_ERROR_INVALID_ARGUMENT = 1,
  LLAMA_DART_ERROR_UNSUPPORTED = 2,
  LLAMA_DART_ERROR_INTERNAL = 3,
  LLAMA_DART_ERROR_MODEL_LOAD = 4,
  LLAMA_DART_ERROR_BUFFER_TOO_SMALL = 5,
  LLAMA_DART_ERROR_CONTEXT_CREATE = 6,
  LLAMA_DART_ERROR_GENERATION = 7,
  LLAMA_DART_ERROR_EMBEDDING = 8,
  LLAMA_DART_ERROR_CANCELLED = 9,
  LLAMA_DART_ERROR_RERANKING = 10,
  LLAMA_DART_ERROR_LORA = 11,
} llama_dart_result;
typedef struct llama_dart_model llama_dart_model;
typedef struct llama_dart_context llama_dart_context;
typedef struct llama_dart_generation llama_dart_generation;
typedef struct llama_dart_lora_adapter llama_dart_lora_adapter;
typedef struct llama_dart_media_input {
  uint32_t struct_size;
  uint32_t type;
  const uint8_t *path_data;
  size_t path_size;
  const uint8_t *content_data;
  size_t content_size;
} llama_dart_media_input;
typedef struct llama_dart_string_view {
  const uint8_t *data;
  size_t size;
} llama_dart_string_view;
typedef struct llama_dart_completion_config {
  uint32_t struct_size;
  const uint8_t *prompt_data;
  size_t prompt_size;
  /* Zero evaluates the prompt without sampling a token. */
  uint32_t max_tokens;
  float temperature;
  int32_t top_k;
  float top_p;
  float min_p;
  float typical_p;
  int32_t penalty_last_n;
  float repeat_penalty;
  float frequency_penalty;
  float presence_penalty;
  uint8_t mirostat;
  float mirostat_tau;
  float mirostat_eta;
  const uint8_t *grammar_data;
  size_t grammar_size;
  const uint8_t *grammar_root_data;
  size_t grammar_root_size;
  const llama_dart_string_view *stop_sequences;
  size_t stop_sequence_count;
  uint32_t seed;
  /* A llama_dart_add_special_mode value. */
  uint8_t add_special;
  uint8_t parse_special;
  const llama_dart_media_input *media_inputs;
  size_t media_input_count;
  const uint8_t *json_schema_data;
  size_t json_schema_size;
  const uint8_t *chat_plan_data;
  size_t chat_plan_size;
  const int32_t *stop_tokens;
  size_t stop_token_count;
} llama_dart_completion_config;
typedef struct llama_dart_completion_stats {
  uint32_t struct_size;
  uint32_t prompt_tokens;
  uint32_t generated_tokens;
  double prompt_eval_ms;
  double decode_ms;
  double total_ms;
  double time_to_first_token_ms;
  uint32_t speculative_draft_tokens;
  uint32_t speculative_accepted_tokens;
  double speculative_draft_ms;
  double speculative_verify_ms;
  /* A llama_dart_stop_reason value. */
  uint32_t stop_reason;
} llama_dart_completion_stats;
typedef struct llama_dart_buffer {
  uint8_t *data;
  size_t size;
} llama_dart_buffer;
typedef struct llama_dart_float_buffer {
  float *data;
  size_t length;
} llama_dart_float_buffer;
typedef struct llama_dart_embedding_config {
  uint32_t struct_size;
  const uint8_t *text_data;
  size_t text_size;
  uint8_t add_special;
  uint8_t parse_special;
} llama_dart_embedding_config;
typedef struct llama_dart_rerank_config {
  uint32_t struct_size;
  const uint8_t *query_data;
  size_t query_size;
  const uint8_t *document_data;
  size_t document_size;
  uint8_t add_special;
  uint8_t parse_special;
} llama_dart_rerank_config;
typedef struct llama_dart_lora_load_config {
  uint32_t struct_size;
  const uint8_t *path_data;
  size_t path_size;
} llama_dart_lora_load_config;
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_state_set(
    llama_dart_context *context, const uint8_t *state_data, size_t state_size);
/*
 * Removes tokens [keep_tokens, keep_tokens + discard_tokens) and shifts the
 * preserved tail left. A zero discard_tokens value discards half of the
 * removable suffix. At least one tail token is always retained.
 */
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_shift(
    llama_dart_context *context, uint32_t keep_tokens,
    uint32_t discard_tokens, uint32_t *out_discarded_tokens);
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_complete(
    llama_dart_context *context, const llama_dart_completion_config *config,
    llama_dart_buffer *out_text, llama_dart_completion_stats *out_stats);
LLAMA_DART_EXPORT llama_dart_result llama_dart_generation_start(
    llama_dart_context *context, const llama_dart_completion_config *config,
    llama_dart_generation **out_generation);
LLAMA_DART_EXPORT llama_dart_result llama_dart_generation_next(
    llama_dart_generation *generation, llama_dart_buffer *out_text,
    llama_dart_completion_stats *out_stats, uint8_t *out_done);
/* Releases a generation returned by llama_dart_generation_start. If the
 * generation has not reached a terminal step, its context is reset so partial
 * prompt/decode state cannot leak into the next request. */
LLAMA_DART_EXPORT void
llama_dart_generation_free(llama_dart_generation *generation);
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_embed(
    llama_dart_context *context, const llama_dart_embedding_config *config,
    llama_dart_float_buffer *out_embedding);
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_rerank(
    llama_dart_context *context, const llama_dart_rerank_config *config,
    float *out_score);
LLAMA_DART_EXPORT llama_dart_result llama_dart_lora_load(
    llama_dart_model *model, const llama_dart_lora_load_config *config,
    llama_dart_lora_adapter **out_adapter);
/* Releases a LoRA adapter returned by llama_dart_lora_load. */
LLAMA_DART_EXPORT void llama_dart_lora_free(
    llama_dart_lora_adapter *adapter);
LLAMA_DART_EXPORT llama_dart_result llama_dart_context_set_lora_adapters(
    llama_dart_context *context, llama_dart_lora_adapter **adapters,
    const float *scales, size_t adapter_count);
/* Releases data returned in llama_dart_buffer fields. */
LLAMA_DART_EXPORT void llama_dart_buffer_free(uint8_t *data);
/* Releases data returned in llama_dart_float_buffer fields. */
LLAMA_DART_EXPORT void llama_dart_float_buffer_free(float *data);
/* Returns a borrowed thread-local UTF-8 message, valid until the next bridge
 * call on this thread. Messages are truncated to 4095 bytes. */
LLAMA_DART_EXPORT const char *llama_dart_last_error_message(void);
LLAMA_DART_EXPORT void llama_dart_clear_last_error(void);