lib/src/ffi/generated_bindings.dart


  llama_dart_result llama_dart_context_state_set(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<ffi.Uint8> state_data,
    int state_size,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_state_set(context, state_data, state_size),
    );
  }

  late final _llama_dart_context_state_setPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('llama_dart_context_state_set');
  late final _llama_dart_context_state_set = _llama_dart_context_state_setPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  llama_dart_result llama_dart_context_shift(
    ffi.Pointer<llama_dart_context> context,
    int keep_tokens,
    int discard_tokens,
    ffi.Pointer<ffi.Uint32> out_discarded_tokens,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_shift(
        context,
        keep_tokens,
        discard_tokens,
        out_discarded_tokens,
      ),
    );
  }

  late final _llama_dart_context_shiftPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Uint32,
            ffi.Uint32,
            ffi.Pointer<ffi.Uint32>,
          )
        >
      >('llama_dart_context_shift');
  late final _llama_dart_context_shift = _llama_dart_context_shiftPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          int,
          int,
          ffi.Pointer<ffi.Uint32>,
        )
      >();

  llama_dart_result llama_dart_context_complete(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<llama_dart_completion_config> config,
    ffi.Pointer<llama_dart_buffer> out_text,
    ffi.Pointer<llama_dart_completion_stats> out_stats,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_complete(context, config, out_text, out_stats),
    );
  }

  late final _llama_dart_context_completePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<llama_dart_completion_config>,
            ffi.Pointer<llama_dart_buffer>,
            ffi.Pointer<llama_dart_completion_stats>,
          )
        >
      >('llama_dart_context_complete');
  late final _llama_dart_context_complete = _llama_dart_context_completePtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<llama_dart_completion_config>,
          ffi.Pointer<llama_dart_buffer>,
          ffi.Pointer<llama_dart_completion_stats>,
        )
      >();

  llama_dart_result llama_dart_generation_start(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<llama_dart_completion_config> config,
    ffi.Pointer<ffi.Pointer<llama_dart_generation>> out_generation,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_generation_start(context, config, out_generation),
    );
  }

  late final _llama_dart_generation_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<llama_dart_completion_config>,
            ffi.Pointer<ffi.Pointer<llama_dart_generation>>,
          )
        >
      >('llama_dart_generation_start');
  late final _llama_dart_generation_start = _llama_dart_generation_startPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<llama_dart_completion_config>,
          ffi.Pointer<ffi.Pointer<llama_dart_generation>>,
        )
      >();

  llama_dart_result llama_dart_generation_next(
    ffi.Pointer<llama_dart_generation> generation,
    ffi.Pointer<llama_dart_buffer> out_text,
    ffi.Pointer<llama_dart_completion_stats> out_stats,
    ffi.Pointer<ffi.Uint8> out_done,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_generation_next(generation, out_text, out_stats, out_done),
    );
  }

  late final _llama_dart_generation_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_generation>,
            ffi.Pointer<llama_dart_buffer>,
            ffi.Pointer<llama_dart_completion_stats>,
            ffi.Pointer<ffi.Uint8>,
          )
        >
      >('llama_dart_generation_next');
  late final _llama_dart_generation_next = _llama_dart_generation_nextPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_generation>,
          ffi.Pointer<llama_dart_buffer>,
          ffi.Pointer<llama_dart_completion_stats>,
          ffi.Pointer<ffi.Uint8>,
        )
      >();

  void llama_dart_generation_free(
    ffi.Pointer<llama_dart_generation> generation,
  ) {
    return _llama_dart_generation_free(generation);
  }

  late final _llama_dart_generation_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<llama_dart_generation>)
        >
      >('llama_dart_generation_free');
  late final _llama_dart_generation_free = _llama_dart_generation_freePtr
      .asFunction<void Function(ffi.Pointer<llama_dart_generation>)>();

  llama_dart_result llama_dart_context_embed(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<llama_dart_embedding_config> config,
    ffi.Pointer<llama_dart_float_buffer> out_embedding,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_embed(context, config, out_embedding),
    );
  }

  late final _llama_dart_context_embedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<llama_dart_embedding_config>,
            ffi.Pointer<llama_dart_float_buffer>,
          )
        >
      >('llama_dart_context_embed');
  late final _llama_dart_context_embed = _llama_dart_context_embedPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<llama_dart_embedding_config>,
          ffi.Pointer<llama_dart_float_buffer>,
        )
      >();

  llama_dart_result llama_dart_context_rerank(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<llama_dart_rerank_config> config,
    ffi.Pointer<ffi.Float> out_score,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_rerank(context, config, out_score),
    );
  }

  late final _llama_dart_context_rerankPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<llama_dart_rerank_config>,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('llama_dart_context_rerank');
  late final _llama_dart_context_rerank = _llama_dart_context_rerankPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_context>,
          ffi.Pointer<llama_dart_rerank_config>,
          ffi.Pointer<ffi.Float>,
        )
      >();

  llama_dart_result llama_dart_lora_load(
    ffi.Pointer<llama_dart_model> model,
    ffi.Pointer<llama_dart_lora_load_config> config,
    ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>> out_adapter,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_lora_load(model, config, out_adapter),
    );
  }

  late final _llama_dart_lora_loadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_model>,
            ffi.Pointer<llama_dart_lora_load_config>,
            ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>>,
          )
        >
      >('llama_dart_lora_load');
  late final _llama_dart_lora_load = _llama_dart_lora_loadPtr
      .asFunction<
        int Function(
          ffi.Pointer<llama_dart_model>,
          ffi.Pointer<llama_dart_lora_load_config>,
          ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>>,
        )
      >();

  void llama_dart_lora_free(ffi.Pointer<llama_dart_lora_adapter> adapter) {
    return _llama_dart_lora_free(adapter);
  }

  late final _llama_dart_lora_freePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<llama_dart_lora_adapter>)
        >
      >('llama_dart_lora_free');
  late final _llama_dart_lora_free = _llama_dart_lora_freePtr
      .asFunction<void Function(ffi.Pointer<llama_dart_lora_adapter>)>();

  llama_dart_result llama_dart_context_set_lora_adapters(
    ffi.Pointer<llama_dart_context> context,
    ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>> adapters,
    ffi.Pointer<ffi.Float> scales,
    int adapter_count,
  ) {
    return llama_dart_result.fromValue(
      _llama_dart_context_set_lora_adapters(
        context,
        adapters,
        scales,
        adapter_count,
      ),
    );
  }

  late final _llama_dart_context_set_lora_adaptersPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<llama_dart_context>,
            ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>>,
            ffi.Pointer<ffi.Float>,
            ffi.Size,
          )
        >
      >('llama_dart_context_set_lora_adapters');
  late final _llama_dart_context_set_lora_adapters =
      _llama_dart_context_set_lora_adaptersPtr
          .asFunction<
            int Function(
              ffi.Pointer<llama_dart_context>,
              ffi.Pointer<ffi.Pointer<llama_dart_lora_adapter>>,
              ffi.Pointer<ffi.Float>,
              int,
            )
          >();

  void llama_dart_buffer_free(ffi.Pointer<ffi.Uint8> data) {
    return _llama_dart_buffer_free(data);
  }

  late final _llama_dart_buffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'llama_dart_buffer_free',
      );
  late final _llama_dart_buffer_free = _llama_dart_buffer_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  void llama_dart_float_buffer_free(ffi.Pointer<ffi.Float> data) {
    return _llama_dart_float_buffer_free(data);
  }

  late final _llama_dart_float_buffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Float>)>>(
        'llama_dart_float_buffer_free',
      );
  late final _llama_dart_float_buffer_free = _llama_dart_float_buffer_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Float>)>();

  ffi.Pointer<ffi.Char> llama_dart_last_error_message() {
    return _llama_dart_last_error_message();
  }

  late final _llama_dart_last_error_messagePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'llama_dart_last_error_message',
      );
  late final _llama_dart_last_error_message = _llama_dart_last_error_messagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  void llama_dart_clear_last_error() {
    return _llama_dart_clear_last_error();
  }

  late final _llama_dart_clear_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
        'llama_dart_clear_last_error',
      );
  late final _llama_dart_clear_last_error = _llama_dart_clear_last_errorPtr
      .asFunction<void Function()>();
}

enum llama_dart_result {
  LLAMA_DART_SUCCESS(0),
  LLAMA_DART_ERROR_INVALID_ARGUMENT(1),
  LLAMA_DART_ERROR_UNSUPPORTED(2),
  LLAMA_DART_ERROR_INTERNAL(3),
  LLAMA_DART_ERROR_MODEL_LOAD(4),
  LLAMA_DART_ERROR_BUFFER_TOO_SMALL(5),
  LLAMA_DART_ERROR_CONTEXT_CREATE(6),
  LLAMA_DART_ERROR_GENERATION(7),
  LLAMA_DART_ERROR_EMBEDDING(8),
  LLAMA_DART_ERROR_CANCELLED(9),
  LLAMA_DART_ERROR_RERANKING(10),
  LLAMA_DART_ERROR_LORA(11);

  final int value;
  const llama_dart_result(this.value);
